--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "- cd client\r - npm start",
   "main": "main.js",
   "dependencies": {
-    "axios": "^0.19.2"
+    "@material-ui/core": "^4.10.0",
+    "axios": "^0.19.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {},
   "scripts": {
