--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
     "request": "^2.88.2"
   }
 }
