--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@material-ui/core": "^4.10.0",
     "@material-ui/lab": "^4.0.0-alpha.54",
     "axios": "^0.19.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-errors": "^1.7.3",
+    "jade": "^1.11.0",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
+    "react-scripts": "^3.4.1",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {},
